--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet" />
+
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -31,7 +34,9 @@
 
         <div class="booking-content">
             <h1>Cruise Queen</h1>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book./p>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                scrambled it to make a type specimen book./p>
         </div>
 
 
@@ -48,30 +53,28 @@
             <div class="inputs">
                 <div class="input-group">
                     <label" for="">Departure</label>
-                    <input class="inp-style" type="date" name="">
+                        <input class="inp-style" type="date" name="">
                 </div>
                 <div class="input-group">
                     <label for="">Return</label>
                     <input class="inp-style" type="date" name="">
                 </div>
             </div>
-            <div class="input-group f-class">
-                <div>
-                    <label for="">First Class ($150)</label>
-                    <input class="inp-style inp-width" type="number" name="">
-                </div>
-                <div class="plus-minus-btn">
-                    <p>+ -</p>
+            <div class="ticket-area">
+                <h6>First Class ($150)</h6>
+                <div class="ticket-input">
+                    <button id="minus-btn" class="btn btn-primary"style="height: fit-content; margin-top: 13px; margin-right: 10px;"><i class="fas fa-minus"></i></button>
+                    <input id="fClass-count" type="text" class="form-control text-center" value="0">
+                    <button id="plus-btn" class="btn btn-primary" style="height: fit-content; margin-top: 13px; margin-left: 10px;"><i class="fas fa-plus"></i></button>
                 </div>
             </div>
-            
-            <div class="input-group f-class">
-                <div>
-                    <label for="">Economy ($100)</label>
-                    <input class="inp-style inp-width" type="number" name="">
-                </div>
-                <div class="plus-minus-btn">
-                    <p> <span>+</span> <span>-</span> </p>
+
+            <div class="ticket-area">
+                <h6>Economy ($100)</h6>
+                <div class="ticket-input">
+                    <button id="minus-btn" class="btn btn-primary"style="height: fit-content; margin-top: 13px; margin-right: 10px;"><i class="fas fa-minus"></i></button>
+                    <input id="eClass-count" type="text" class="form-control text-center" value="0">
+                    <button id="plus-btn" class="btn btn-primary" style="height: fit-content; margin-top: 13px; margin-left: 10px;"><i class="fas fa-plus"></i></button>
                 </div>
             </div>
             <div class="calculations">
